[gd_scene load_steps=21 format=3 uid="uid://dwg080ll0fk7"]

[ext_resource type="Script" uid="uid://bidpopr5aibvq" path="res://scripts/props/window_area.gd" id="1_qm8j4"]
[ext_resource type="Texture2D" uid="uid://dhqho1sbx41th" path="res://assets/sprites/atlas/window/window_rama.tres" id="2_hjqs4"]
[ext_resource type="Shader" uid="uid://834uwk1kh1fg" path="res://assets/shaders/candle.gdshader" id="3_tdbd7"]
[ext_resource type="Texture2D" uid="uid://bikc50nc757pi" path="res://assets/sprites/atlas/window/window_glass_0.tres" id="4_t2tsy"]
[ext_resource type="Texture2D" uid="uid://co5regsgfs8iy" path="res://assets/sprites/atlas/window/window_stvorka_L2.tres" id="5_qeki4"]
[ext_resource type="Texture2D" uid="uid://cyd711vy2ymbk" path="res://assets/sprites/atlas/window/window_stvorka_R2.tres" id="6_eo1bo"]
[ext_resource type="Texture2D" uid="uid://byewwf4aswq2n" path="res://assets/sprites/atlas/window/ELISEY svet okna 2.png" id="7_byh58"]
[ext_resource type="Texture2D" uid="uid://dxwcysahm7rki" path="res://assets/sprites/atlas/window/window_glass_1.tres" id="8_qjuks"]
[ext_resource type="Texture2D" uid="uid://iy40nmk8il5f" path="res://assets/sprites/atlas/window/window_stvorka_L.tres" id="9_rm4dd"]
[ext_resource type="Texture2D" uid="uid://c5v4tdvnmi1xp" path="res://assets/sprites/atlas/window/window_stvorka_R.tres" id="10_s631t"]
[ext_resource type="Texture2D" uid="uid://ctxl1gsim2gcr" path="res://assets/sprites/atlas/window/ELISEY svet okna 1.png" id="11_rqp77"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_wgf40"]
light_mode = 1

[sub_resource type="Gradient" id="Gradient_ql6yw"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.5685484)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vxgch"]
gradient = SubResource("Gradient_ql6yw")
width = 128
height = 138
fill = 1
fill_from = Vector2(0.5252404, 0.4957265)

[sub_resource type="Curve" id="Curve_cjddn"]
_data = [Vector2(0.88333327, 0.9696969), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_13oey"]
curve = SubResource("Curve_cjddn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q8148"]
lifetime_randomness = 0.11
particle_flag_disable_z = true
emission_shape_scale = Vector3(2.485, 2.335, 1)
emission_shape = 1
emission_sphere_radius = 37.85
inherit_velocity_ratio = 0.289
initial_velocity_min = -2.37
initial_velocity_max = 4.48
angular_velocity_min = -1.6093254e-05
angular_velocity_max = -1.6093254e-05
orbit_velocity_min = -0.014999906
orbit_velocity_max = 0.030000096
radial_velocity_min = -2.2351742e-05
radial_velocity_max = -2.2351742e-05
gravity = Vector3(38.445, 98.825, 0)
linear_accel_min = -2.2351742e-06
linear_accel_max = -2.2351742e-06
radial_accel_min = -2.2351742e-06
radial_accel_max = 2.9899976
scale_min = 0.0
scale_max = 0.03
alpha_curve = SubResource("CurveTexture_13oey")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnvhp"]
size = Vector2(225, 260)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_03daj"]
shader = ExtResource("3_tdbd7")
shader_parameter/blend_mode = 7

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mr4qg"]
shader = ExtResource("3_tdbd7")
shader_parameter/blend_mode = 7

[node name="window" type="Area2D"]
z_index = 3
scale = Vector2(0.92, 0.92)
script = ExtResource("1_qm8j4")
metadata/_edit_lock_ = true

[node name="snow2" type="GPUParticles2D" parent="."]
z_index = 4
material = SubResource("CanvasItemMaterial_wgf40")
position = Vector2(1.0869141, 6.5217285)
scale = Vector2(1.0869565, 1.0869565)
amount = 68
texture = SubResource("GradientTexture2D_vxgch")
lifetime = 2.6799999999999997
preprocess = 2.17
speed_scale = 0.25
explosiveness = 0.06
randomness = 0.36
collision_base_size = 4.3
local_coords = true
draw_order = 0
process_material = SubResource("ParticleProcessMaterial_q8148")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -1)
shape = SubResource("RectangleShape2D_pnvhp")

[node name="Node2D" type="Node2D" parent="."]

[node name="WindowRama" type="Sprite2D" parent="Node2D"]
position = Vector2(7, -5)
texture = ExtResource("2_hjqs4")

[node name="open" type="Node2D" parent="Node2D"]
position = Vector2(-62, -62)

[node name="WindowGlass0" type="Sprite2D" parent="Node2D/open"]
light_mask = 3
z_index = -1
material = SubResource("ShaderMaterial_03daj")
position = Vector2(70, 57)
texture = ExtResource("4_t2tsy")

[node name="WindowStvorkaL2" type="Sprite2D" parent="Node2D/open"]
light_mask = 3
position = Vector2(-90, 51)
texture = ExtResource("5_qeki4")

[node name="WindowStvorkaR2" type="Sprite2D" parent="Node2D/open"]
light_mask = 3
position = Vector2(241, 45)
texture = ExtResource("6_eo1bo")

[node name="PointLight2D2" type="PointLight2D" parent="Node2D/open"]
position = Vector2(17, 245)
color = Color(0, 0.54147065, 0.94096404, 1)
energy = 1.1
range_item_cull_mask = 2
texture = ExtResource("7_byh58")

[node name="close" type="Node2D" parent="Node2D"]
visible = false
position = Vector2(-514, -208)

[node name="WindowGlass1" type="Sprite2D" parent="Node2D/close"]
light_mask = 3
material = SubResource("ShaderMaterial_mr4qg")
position = Vector2(520, 203)
texture = ExtResource("8_qjuks")

[node name="WindowStvorkaL" type="Sprite2D" parent="Node2D/close"]
light_mask = 3
position = Vector2(467, 205)
texture = ExtResource("9_rm4dd")

[node name="WindowStvorkaR" type="Sprite2D" parent="Node2D/close"]
light_mask = 3
position = Vector2(574, 204)
texture = ExtResource("10_s631t")

[node name="PointLight2D" type="PointLight2D" parent="Node2D/close"]
position = Vector2(466, 391)
color = Color(0, 0.54147065, 0.94096404, 1)
energy = 0.5
range_item_cull_mask = 2
texture = ExtResource("11_rqp77")
